# minra

./: README.md  package-lock.json  package.json
algorithms/: README.md
algorithms/spaced_repetition/: fsrs.ipynb
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/entity/src/: author.rs  lib.rs  prelude.rs  source.rs  source_author_mapping.rs  source_tag_mapping.rs  tag.rs
src-tauri/migration/src/: lib.rs  m20231111_123534_sources.rs  m20231119_121558_tags.rs  m20231119_121615_authors.rs  m20231119_121637_source_tagmaps.rs  m20231119_121646_source_authormaps.rs
src-tauri/scripts/: generate_entities.sh
src-tauri/src/: config.rs  lib.rs  util.rs
src-tauri/~/Documents/minra/.minra/: db.sqlite
