[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.11", features = [] }


[workspace]
members = [".", "entity", "migration"]

[workspace.dependencies]
color_eyre = { version = "0.6" }
thiserror = { version = "1" }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
toml = "0.8"

[workspace.metadata.local-install]
sea-orm-cli = "0.12.4"

[dependencies]
tauri = { version = "2.0.0-alpha.17", features = ["linux-ipc-protocol"] }
serde_json = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
migration = { workspace = true }
toml = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
